add myTrialsReport buttons to player footers

--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -16,14 +16,25 @@
 
 <div class="row">
   <div class="col-xs-12 hidden-xs hidden-sm">
-    <a href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
-       type="button" target="_blank"
-       class="btn btn-block btn-trials btn-default bg-info dker m-0" style="border:none"
-       analytics-on analytics-event="Click" analytics-category="DestinyTracker"
-       data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
-       data-position="right"
-       chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-       View DestinyTracker Stats
-     </a>
+    <div class="btn-group btn-group-justified m-0" role="group">
+      <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
+         type="button" target="_blank"
+         class="btn btn-default btn-trials bg-info dk m-0 b-0"
+         analytics-on analytics-event="Click" analytics-category="myDestinyTrialsReport"
+         data-intro="Links to <strong>myDestinyTrialsReport</strong> for summary of player's guardians"
+         data-position="left"
+         chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+         myTrialsReport
+       </a>
+      <a href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
+         type="button" target="_blank"
+         class="btn btn-default btn-trials bg-info dker m-0 b-0"
+         analytics-on analytics-event="Click" analytics-category="DestinyTracker"
+         data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
+         data-position="right"
+         chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+         DestinyTracker
+       </a>
+    </div>
   </div>
 </div>
