--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -25,7 +25,7 @@
                 <label class="btn btn-material-grey" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
               </span>
               <div class="form-control-wrapper ml-0 mr-0">
-                <input type="text" class="form-control pl-10 pr-10" placeholder="Enter player name" ng-model="mainPlayer" style="height: 34px; z-index: 0;">
+                <input type="text" class="form-control pl-10 pr-10" placeholder="Enter profile name" ng-model="mainPlayer" style="height: 34px; z-index: 0;">
               </div>
               <!--<input type="text" class="form-control floating-label" placeholder="Enter a Guardian's name" ng-model="mainPlayer">-->
               <span class="input-group-btn">
