normalize placeholder text

--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -24,7 +24,7 @@
                 <label class="btn btn-default" ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
                 <label class="btn btn-default" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
               </span>
-              <input type="text" class="form-control" placeholder="Enter a Guardian's name" ng-model="mainPlayer">
+              <input type="text" class="form-control" placeholder="Enter profile name" ng-model="mainPlayer">
               <span class="input-group-btn">
                 <button type="submit" class="btn btn-default" ng-disabled="status">Search</button>
               </span>
