--- a/app/views/fireteam/maps.html
+++ b/app/views/fireteam/maps.html
@@ -1,6 +1,6 @@
 <div class="row pt-0" style="margin-top:-3px">
   <div class="col-xs-12">
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
       <thead>
       <tr>
         <th class="p-0">
