--- a/app/views/fireteam/addStats.html
+++ b/app/views/fireteam/addStats.html
@@ -60,7 +60,7 @@
 </div>
 <div class="row pt-0" style="margin-top:-3px">
   <div class="col-xs-12">
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
       <thead>
         <tr>
           <th class="p-0">
