--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -10,7 +10,7 @@
     <ng-include class="mb-10" src="'views/fireteam/history.html'"></ng-include>
   </tab>
   <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="btn-material-brown">
-    <ng-include src="'views/fireteam/maps.html'"></ng-include>
+    <ng-include src="'views/fireteam/addStats.html'"></ng-include>
   </tab>
 </tabset>
 
