updates, misc fixes

--- a/app/views/profile/player.html
+++ b/app/views/profile/player.html
@@ -23,7 +23,7 @@
        data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
        data-position="right"
        chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-       View DestinyTracker Stats
+       DestinyTracker
      </a>
   </div>
 </div>
