--- a/app/views/profile/index.html
+++ b/app/views/profile/index.html
@@ -4,16 +4,12 @@
      class="col-xs-12 col-md-4 player-wrapper">
   <div class="row" style="height:18px">
     <div class="col-xs-12">
-      <span class="label bg-trialsgold"
-            style="margin-right:-2px"
-            ng-repeat="hazard in player.nonHazard track by $index"
-            ng-bind="hazard"
-            popover="{{DestinyHazardDefinition[hazard]}}"
-            popover-trigger="mouseenter">
+      <span class="label bg-trialsgold" style="margin-right:2px" ng-style="$last ? {'margin-right':'-1px'} : {}"
+            ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard"
+            popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter">
       </span>
       <span class="label bg-danger" style="margin-right:2px"
-            ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index"
-            ng-bind="hazard"
+            ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index" ng-bind="hazard"
             popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter">
       </span>
     </div>
