--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -7,7 +7,7 @@
     <ng-include src="'views/fireteam/armor.html'"></ng-include>
   </tab>
   <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match" class="btn-material-brown">
-    <ng-include class="mb-10" src="'views/fireteam/history.html'"></ng-include>
+    <ng-include src="'views/fireteam/history.html'"></ng-include>
   </tab>
   <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="btn-material-brown">
     <ng-include src="'views/fireteam/addStats.html'"></ng-include>
