--- a/app/views/fireteam/weapons.html
+++ b/app/views/fireteam/weapons.html
@@ -1,6 +1,5 @@
 <div data-intro="Weapon images and perks, border color displays damage element, grey if kinetic. </br> <em>Hover over image for weapon name</em>"
-     data-position="left"
-     chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+     data-position="left" chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
   <!--<div class="row ml-0 mr-0 weapon" style="height:130px" ng-repeat="weapon in [player.weapons.primary, player.weapons.special, player.weapons.heavy] track by $index">-->
     <!--<div class="col-xs-4 pt-10">-->
       <!--<div class="card mb-0">-->
