--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -15,7 +15,7 @@
 </tabset>
 
 <div class="row">
-  <div class="col-xs-12 hidden-xs hidden-sm">
+  <div class="col-xs-12">
     <div class="btn-group btn-group-justified m-0" role="group">
       <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
          type="button" target="_blank"
