--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -6,11 +6,14 @@
     <!-- BLOG POSTS -->
     <div class="col-sm-8 col-sm-offset-2 blog-posts">
 
-
       <article class="post-entry">
-
         <div class="entry-image">
-          <a href="#"><img src="/images/mydtr.jpg" class="img-responsive" alt="Image"></a>
+          <a href="#"><img src="/images/burning_shrine.jpg" class="img-responsive" alt="Image"></a>
+          <header>
+            <h2>
+              <em>Burning Shrine</em>
+            </h2>
+          </header>
         </div>
 
         <div class="entry-title">
@@ -34,10 +37,7 @@
           </p>
           <p>
             Navigate to <strong><a href="http://my.DestinyTrialsReport.com" target="_top">http://my.DestinyTrialsReport.com/</a> </strong>
-            and use the search or simply add your platform and name to the url:
-            <strong><a href="http://my.DestinyTrialsReport.com/ps/Gothalion" target="_top">http://my.DestinyTrialsReport.com/ps/Gothalion</a></strong>
-            or
-            <strong><a href="http://my.DestinyTrialsReport.com/xbox/Deej BNG" target="_top">http://my.DestinyTrialsReport.com/xbox/Deej BNG</a></strong>
+            and use the search.
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
