--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 player-wrapper col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
   <div class="row ml-0 mr-0" ng-show="$index === 0">
-    <div class="btn-group btn-group-justified shadow-z-1">
+    <div class="btn-group btn-group-justified shadow-z-1" style="height: 36px;">
       <div class="btn-group">
         <button class="btn btn-trials btn-material-blue-grey" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
                 ng-click="refreshInventory()"
@@ -29,16 +29,22 @@
     <div class="col-xs-12">
       <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, false)">
         <div class="input-group mt-10 mb-10 shadow-z-1" ng-class="helpOverlay && ($index === 2) ? 'z99999999' : ''">
-          <div class="input-group-btn">
-            <button class="btn btn-white dropdown-toggle" type="button"
-                    id="playerSelect{{($index)}}" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="true"
+          <span ng-hide="recentPlayers" class="input-group-btn">
+            <button class="btn btn-trials btn-white" type="button"
                     ng-click="suggestRecentPlayers()"
-                    analytics-on analytics-event="Click" analytics-category="Recent Players">
+                    analytics-on analytics-event="Click"
+                    analytics-category="Suggest Recent Players">
+              Recent Players
+            </button>
+          </span>
+          <div ng-show="recentPlayers" class="input-group-btn">
+            <button class="btn btn-trials dropdown-toggle btn-white" style="margin-right:-2px" type="button"
+                    id="dropdownMenuMobile{{($index)}}" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="true">
               Recent Players
               <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu" aria-labelledby="playerSelect{{$index}}">
+            <ul class="dropdown-menu btn-trials" aria-labelledby="dropdownMenuMobile{{$index}}">
               <li ng-repeat="player in recentPlayers track by $index">
                 <a class="black-font" ng-bind="player.name" ng-click="setRecentPlayer(player, ($parent.$index))"
                    analytics-on analytics-event="Click" analytics-category="Recent From Dropdown">
