--- a/app/views/shared/profile_header.html
+++ b/app/views/shared/profile_header.html
@@ -9,6 +9,18 @@
             </h3>
           </a>
         </div>
+        <div class="visible-xs visible-sm col-xs-6">
+          <a href="/" target="_self" style="text-decoration:none">
+            <h4 class="text-light logo text-white lato m-0 p-0">
+              <span class="text-lg text-trialsgold">my</span><span class="logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
+            </h4>
+          </a>
+        </div>
+        <div class="visible-xs visible-sm col-xs-6 text-right">
+          <a type="button" class="btn btn-darkgray mt-0 b-0" href="http://www.destinytrialsreport.com" target="_self" style="padding-top: 3px;">
+            <span class="text-trialsgold">trials</span>Report
+          </a>
+        </div>
         <div class="col-xs-12 col-md-4">
           <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="input-group">
@@ -31,6 +43,7 @@
         </div>
         <div class="hidden-xs hidden-sm col-md-3 text-right">
           <button type="button" class="btn btn-material-grey mt-0" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
+          <a type="button" class="btn btn-darkgray mt-0 b-0" href="http://www.destinytrialsreport.com" target="_self"><span class="text-trialsgold">trials</span>Report</a>
         </div>
       </div>
     </div>
