--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,8 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 $fa-font-path: "../bower_components/font-awesome/fonts/";
+
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+
 // bower:scss
 @import "font-awesome/scss/font-awesome.scss";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
@@ -17,7 +19,6 @@ $fa-font-path: "../bower_components/font-awesome/fonts/";
 //Pages
 @import "pages/global"; // global page settings
 @import "pages/blog";
-
 
 // Sections
 @import "sections/content"; // content section
@@ -143,21 +144,8 @@ body {
   color: #c50000;
 }
 
-.emblem {
-  p {
-    margin: 0 0 10px 70px;
-    color: white;
-  }
-  p.large {
-    font-size: 20px;
-  }
-}
-
-span.right {
-  float: right;
-  padding-right: 5px;
-}
 .card-container {
+  height: 66px;
   .card {
     min-height: 0 !important;
   }
@@ -189,7 +177,7 @@ img.kinetic-dmg {
 
 .tab-content .tab-pane {
   padding: 0px;
-  min-height: 498px;
+  min-height: 500px;
 }
 
 tr.thin {
@@ -315,9 +303,4 @@ tr.thin {
     font-size: 21px;
     top: 3px;
   }
-}
-
-
-* {
-  box-sizing: border-box;
 }
