--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,9 +1,9 @@
 <div class="col-xs-12 player-wrapper col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
   <div class="row ml-0 mr-0" ng-show="$index === 0">
-    <div class="btn-group btn-group-justified shadow-z-1" style="height: 36px;">
+    <div class="btn-group btn-group-justified shadow-z-1">
       <div class="btn-group">
-        <button class="btn btn-trials btn-material-blue-grey" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
-                ng-click="refreshInventory()"
+        <button class="btn btn-material-blue-grey" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
+                ng-click="refreshInventory()" style="height:36px"
                 analytics-on analytics-event="Click" analytics-category="Refresh Inventory"
                 data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
                 data-position="right" chardin-show="true" data-class="hidden-xs hidden-sm">
@@ -11,11 +11,12 @@
         </button>
       </div>
       <div class="btn-group" ng-show="player.otherCharacters.length > 1">
-        <button class="btn btn-white dropdown-toggle" type="button" id="characterSelect" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <button id="characterSelect" class="btn btn-white dropdown-toggle" style="height:36px"
+                type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
           <span ng-bind="player.className"></span>
           <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu" style="width:100%" aria-labelledby="characterSelect">
+        <ul class="dropdown-menu" style="min-width:100%" aria-labelledby="characterSelect">
           <li ng-repeat="character in player.otherCharacters" ng-if="player.characterId !== character.characterId">
             <a ng-bind="character.className" ng-click="setRecentPlayer(character, 0, true)"
                analytics-on analytics-event="Click" analytics-category="Character Change">
@@ -30,21 +31,21 @@
       <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, false)">
         <div class="input-group mt-10 mb-10 shadow-z-1" ng-class="helpOverlay && ($index === 2) ? 'z99999999' : ''">
           <span ng-hide="recentPlayers" class="input-group-btn">
-            <button class="btn btn-trials btn-white" type="button"
+            <button class="btn btn-white" type="button"
                     ng-click="suggestRecentPlayers()"
                     analytics-on analytics-event="Click"
                     analytics-category="Suggest Recent Players">
-              Recent Players
+              Suggest Players
             </button>
           </span>
           <div ng-show="recentPlayers" class="input-group-btn">
-            <button class="btn btn-trials dropdown-toggle btn-white" style="margin-right:-2px" type="button"
-                    id="dropdownMenuMobile{{($index)}}" data-toggle="dropdown"
+            <button class="btn btn-white dropdown-toggle" type="button"
+                    id="playerSelect{{($index)}}" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="true">
               Recent Players
               <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu btn-trials" aria-labelledby="dropdownMenuMobile{{$index}}">
+            <ul class="dropdown-menu" aria-labelledby="playerSelect{{$index}}">
               <li ng-repeat="player in recentPlayers track by $index">
                 <a class="black-font" ng-bind="player.name" ng-click="setRecentPlayer(player, ($parent.$index))"
                    analytics-on analytics-event="Click" analytics-category="Recent From Dropdown">
@@ -52,7 +53,7 @@
               </li>
             </ul>
           </div>
-          <input type="text" class="form-control pl-10" placeholder="Search for..." ng-model="teammateName"
+          <input type="text" class="form-control" placeholder="Search for..." ng-model="teammateName"
                  ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'"
                  style="height:36px">
           <div class="input-group-btn">
