--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -2,7 +2,7 @@
      data-intro="Hovering over the playercard will reveal subclass perks"
      data-position="top"
      chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-  <div class="card mb-0"
+  <div class="card mb-0 text-white"
        style="background-image:url('{{player.emblem}}'),url('{{player.background[0]}}');
        background-repeat:no-repeat,no-repeat; background-position:left,right;
        background-size:66px 66px,100% 66px; height:66px; box-shadow:none; border-radius:0px">
@@ -10,34 +10,47 @@
          data-intro="Trials <strong>k/d</strong> and <strong>win %</strong> for this <strong>character</strong><br/>Flawless based on account lifetime, <strong>not</strong> weekly stat"
          data-position="right"
          chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-      <p class="large mb-0">
-        <span ng-bind="player.name"></span>
-        <span ng-show="player.stats.killsDeathsRatio" class="right">
-          <span class="hidden-xs hidden-md">K/D:</span>
-          <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
-        </span>
-      </p>
-      <p class="mb-0">
-        <span ng-show="player.level && player.class.name">
-          <span class="hidden-xs">Level</span>
-          <span ng-bind="player.level"></span>
-          <span ng-bind="player.class.name"></span>
-        </span>
-        <span ng-show="player.stats.activitiesEntered" class="right">
-          Win<span class="hidden-xs"> Rate</span>:
-          <span ng-bind="(100 * player.stats.activitiesWon.basic.value / player.stats.activitiesEntered.basic.value).toFixed()"></span>%
-        </span>
-      </p>
-      <p class="mb-0">
-        <span ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
-        <span ng-show="player.lighthouse === true">Flawless</span>
-        <span ng-show="player.neverTrials">No Trials Games</span>
-        <span ng-show="player.stats.combatRating" class="right">
-          <span class="visible-xs-inline">CR:</span>
-          <span class="hidden-xs">Rating:</span>
-          <span ng-bind="player.stats.combatRating.basic.displayValue"></span>
-        </span>
-      </p>
+      <div class="row text-lg" style="margin-left:70px; margin-right:0px">
+        <div class="col-xs-8 p-0">
+          <span ng-bind="player.name" style="width:100%; float:left; overflow:hidden; text-overflow:ellipsis"></span>
+        </div>
+        <div class="col-xs-4 p-0 pr-5 text-right">
+          <span ng-show="player.stats.killsDeathsRatio">
+            <span class="hidden-xs hidden-md">K/D:</span>
+            <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
+          </span>
+        </div>
+      </div>
+      <div class="row" style="margin-left:70px; margin-right:0px">
+        <div class="col-xs-7 p-0">
+          <span ng-show="player.level && player.class.name">
+            <span class="hidden-xs hidden-md">Level</span>
+            <span ng-bind="player.level"></span>
+            <span ng-bind="player.class.name"></span>
+          </span>
+        </div>
+        <div class="col-xs-5 p-0 pr-5 text-right">
+          <span ng-show="player.stats.activitiesEntered">
+            <span class="visible-xs-inline">Win:</span>
+            <span class="hidden-xs">Win Rate:</span>
+            <span ng-bind="(100 * player.stats.activitiesWon.basic.value / player.stats.activitiesEntered.basic.value).toFixed() + '%'"></span>
+          </span>
+        </div>
+      </div>
+      <div class="row" style="margin-left:70px; margin-right:0px">
+        <div class="col-xs-6 p-0">
+          <span ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
+          <span ng-show="player.lighthouse === true">Flawless</span>
+          <span ng-show="player.neverTrials">No Trials Games</span>
+        </div>
+        <div class="col-xs-6 p-0 pr-5 text-right">
+          <span ng-show="player.stats.combatRating">
+            <span class="visible-xs-inline">CR:</span>
+            <span class="hidden-xs">Rating:</span>
+            <span ng-bind="player.stats.combatRating.basic.displayValue"></span>
+          </span>
+        </div>
+      </div>
     </div>
     <div class="back">
       <div class="col-xs-12">
@@ -46,7 +59,7 @@
           <a class="icon icon-white m-0" style="margin-top:4px!important; margin-right:5px!important; width:25px; height:25px">
             <img class="img-responsive" ng-src="{{classNode.icon || ''}}">
           </a>
-          <span class="text-left text-sm text-white" style="top:10px; position:absolute; white-space: nowrap;" ng-bind="classNode.name"></span>
+          <span class="text-left text-sm" style="top:10px; position:absolute; white-space:nowrap;" ng-bind="classNode.name"></span>
         </div>
       </div>
     </div>
