--- a/app/views/profile/player.html
+++ b/app/views/profile/player.html
@@ -1,6 +1,6 @@
 <ng-include src="infoPartial"></ng-include>
 
-<tabset class="col-xs-12 p-0" justified="true" style="min-height:549px">
+<tabset class="col-xs-12 p-0" justified="true">
   <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="btn-material-brown">
     <ng-include src="statPartial"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
