--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -8,9 +8,8 @@
        background-size:66px 66px,100% 66px; height:66px; box-shadow:none; border-radius:0px">
     <div class="front p-0"
          data-intro="Trials <strong>k/d</strong> and <strong>win %</strong> for this <strong>character</strong><br/>Flawless based on account lifetime, <strong>not</strong> weekly stat"
-         data-position="right"
-         chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-      <div class="row text-lg" style="margin-left:70px; margin-right:0px">
+         data-position="right" chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+      <div class="row" style="margin-left:70px; margin-right:0px; font-size:20px">
         <div class="col-xs-8 p-0">
           <span ng-bind="player.name" style="width:100%; float:left; overflow:hidden; text-overflow:ellipsis"></span>
         </div>
