Redesign (still needs refinement)

--- a/app/views/fireteam/armor.html
+++ b/app/views/fireteam/armor.html
@@ -1,4 +1,4 @@
-<div class="row ml-0 mr-0 mb-10"
+<div class="row"
      data-intro="Current equipped armor <br/><em>hover over image for the name</em>"
      data-position="left"
      chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
