--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,5 +1,5 @@
-<div class="col-xs-12 player-wrapper col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
-  <div class="row ml-0 mr-0" ng-show="$index === 0">
+<div class="col-xs-12 col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
+  <!--<div class="row ml-0 mr-0" ng-show="$index === 0">
     <div class="btn-group btn-group-justified shadow-z-1" style="height: 36px;">
       <div class="btn-group">
         <button class="btn btn-trials btn-material-blue-grey" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
@@ -79,10 +79,6 @@
             popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter">
       </span>
     </div>
-  </div>
-  <section class="tile tile-simple player shadow-z-2" ng-class="helpOverlay && ($middle) ? 'z99999999' : 'z000000'">
-    <div class="tile-body p-0">
-      <ng-include src="'views/fireteam/player.html'"></ng-include>
-    </div>
-  </section>
+  </div>-->
+  <ng-include src="'views/fireteam/player.html'"></ng-include>
 </div>
