--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,40 +1,43 @@
-<ng-include src="infoPartial"></ng-include>
+<div class="player shadow-z-1">
+  <ng-include src="infoPartial"></ng-include>
+  <ng-include src="'views/fireteam/weapons.html'"></ng-include>
+  <ng-include src="'views/fireteam/gear.html'"></ng-include>
 
-<tabset class="col-xs-12 p-0" justified="true" style="min-height:549px">
-  <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="btn-material-brown">
-    <ng-include src="statPartial"></ng-include>
-    <ng-include src="'views/fireteam/weapons.html'"></ng-include>
-    <ng-include src="'views/fireteam/armor.html'"></ng-include>
-  </tab>
-  <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match" class="btn-material-brown">
-    <ng-include src="'views/fireteam/history.html'"></ng-include>
-  </tab>
-  <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="btn-material-brown">
-    <ng-include src="'views/fireteam/addStats.html'"></ng-include>
-  </tab>
-</tabset>
+  <!--<tabset class="col-xs-12 p-0" justified="true" style="min-height:549px">
+    <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="btn-material-brown">
+      <ng-include src="statPartial"></ng-include>
+      <ng-include src="'views/fireteam/armor.html'"></ng-include>
+    </tab>
+    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match" class="btn-material-brown">
+      <ng-include src="'views/fireteam/history.html'"></ng-include>
+    </tab>
+    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="btn-material-brown">
+      <ng-include src="'views/fireteam/addStats.html'"></ng-include>
+    </tab>
+  </tabset>-->
 
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group btn-group-justified m-0" role="group">
-      <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
-         type="button" target="_blank"
-         class="btn btn-default btn-trials bg-info dk m-0 b-0"
-         analytics-on analytics-event="Click" analytics-category="myDestinyTrialsReport"
-         data-intro="Links to <strong>myDestinyTrialsReport</strong> for summary of player's guardians"
-         data-position="left"
-         chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-        myTrialsReport
-      </a>
-      <a href="http://destinytracker.com/destiny/playlists/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}/trialsOfOsiris"
-         type="button" target="_blank"
-         class="btn btn-default btn-trials bg-info dker m-0 b-0"
-         analytics-on analytics-event="Click" analytics-category="DestinyTracker"
-         data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
-         data-position="right"
-         chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-        DestinyTracker
-      </a>
+  <div class="player__links">
+    <div class="row">
+      <div class="col-xs-12 player__links__btns">
+        <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
+           type="button" target="_blank"
+           class="btn btn-default btn-trials bg-info dk m-0 b-0"
+           analytics-on analytics-event="Click" analytics-category="myDestinyTrialsReport"
+           data-intro="Links to <strong>myDestinyTrialsReport</strong> for summary of player's guardians"
+           data-position="left"
+           chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+          myTrialsReport
+        </a>
+        <a href="http://destinytracker.com/destiny/playlists/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}/trialsOfOsiris"
+           type="button" target="_blank"
+           class="btn btn-default btn-trials bg-info dker m-0 b-0"
+           analytics-on analytics-event="Click" analytics-category="DestinyTracker"
+           data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
+           data-position="right"
+           chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+          DestinyTracker
+        </a>
+      </div>
     </div>
   </div>
 </div>
