--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,31 +1,22 @@
-<footer class="footer bg-darkgray pt-10 pb-10" id="footer">
+<div class="footer shadow-z-1">
   <div class="container-fluid">
     <div class="row">
-      <div class="hidden-xs hidden-sm col-md-2 col-md-offset-1" style="display:flex; align-content:center">
-        <div>
-          <h5 class="custom-font text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
-          <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
-          <h5 class="custom-font text-sm"><strong><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></strong></h5>
-        </div>
+      <div class="col-xs-6">
+        <h5>© 2015 DestinyTrialsReport</h5>
+        <h5>DestinyTrialsReport@gmail.com</h5>
+        <h5><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
       </div>
-      <div class="col-xs-12 col-md-6 text-center">
-        <div ad-sense></div>
-      </div>
-      <div class="col-xs-6 hidden-md hidden-lg" style="display:flex; align-content:center">
-        <div>
-          <h5 class="custom-font text-sm">© 2015 DestinyTrialsReport</h5>
-          <h5 class="custom-font text-sm">DestinyTrialsReport@gmail.com</h5>
-          <h5 class="custom-font text-sm"><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
-        </div>
-      </div>
-      <div class="col-xs-6 col-md-2 text-right">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="mt-20" style="overflow:hidden">
+      <div class="col-xs-6 text-right">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
       </div>
+      <div class="col-xs-12 col-md-6 text-center">
+        <div ad-sense></div>
+      </div>
     </div>
   </div>
-</footer>
+</div>
