--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -1,53 +1,127 @@
-<div class="header b-0 shadow-z-1">
-  <div class="navbar navbar-default bg-darkgray lt b-0 br-0 mb-5" role="navigation">
-    <div class="container-fluid">
-      <div class="row mt-20 mb-20">
-        <div class="visible-xs visible-sm col-xs-6">
-          <a href="/" target="_self" style="text-decoration:none">
-            <h4 class="text-light logo text-white lato m-0 p-0">
-              <span class="logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
-            </h4>
+<div class="header-bar shadow-z-1">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 header-bar__content">
+        <h1 class="main-title">
+          <a href="/" target="_self">
+            Destiny <span class="highlight">Trials</span> Report
           </a>
-        </div>
-        <div class="visible-xs visible-sm col-xs-6 text-right">
-          <!--<a type="button" class="btn btn-darkgray mt-0 b-0" data-toggle="modal" data-target="#mapModal" style="padding-top: 3px;">Map</a>-->
-          <a type="button" class="btn btn-darkgray mt-0 b-0" href="http://my.destinytrialsreport.com" target="_self" style="padding-top: 3px;">
-            <span class="text-trialsgold">my</span>Report
-          </a>
-        </div>
-        <div class="hidden-xs hidden-sm col-md-3 col-md-offset-1">
-          <a href="/" target="_self" style="text-decoration:none">
-            <h3 class="text-light logo text-white lato m-0 p-0">
-              <span class="logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
-            </h3>
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
-            <div class="input-group">
-              <span class="input-group-btn"
-                    data-intro="Toggle between PSN and XBL platforms"
-                    data-position="left"
-                    chardin-show="true">
-                <label class="btn btn-material-grey" ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
-                <label class="btn btn-material-grey" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
-              </span>
-              <div class="form-control-wrapper ml-0 mr-0">
-                <input type="text" class="form-control pl-10 pr-10" placeholder="Enter profile name" ng-model="mainPlayer" style="height: 34px; z-index: 0;">
-              </div>
-              <!--<input type="text" class="form-control floating-label" placeholder="Enter a Guardian's name" ng-model="mainPlayer">-->
-              <span class="input-group-btn">
-                <button type="submit" class="btn btn-material-grey" ng-disabled="status">Search</button>
-              </span>
-            </div>
-          </form>
-        </div>
-        <div class="hidden-xs hidden-sm col-md-3 text-right">
-          <button type="button" class="btn btn-material-grey mt-0" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
-          <button type="button" class="btn btn-material-grey mt-0" data-toggle="modal" data-target="#mapModal">Map</button>
-          <a type="button" class="btn btn-darkgray mt-0 b-0" href="http://my.destinytrialsreport.com" target="_self"><span class="text-trialsgold">my</span>Report</a>
+        </h1>
+        <div class="header__actions">
+          <button type="button" class="btn" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
+          <button type="button" class="btn" data-toggle="modal" data-target="#mapModal">Map</button>
+          <button type="button" class="btn my-report" href="http://my.destinytrialsreport.com" target="_self"><span class="highlight">my</span>Report</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+<div class="main-search shadow-z-1">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="main-search__content">
+          <div class="main-search__toggle">
+            <span data-intro="Toggle between PSN and XBL platforms"
+                  data-position="left"
+                  chardin-show="true">
+              <div class="togglebutton">
+                <label>
+                  <label ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
+                  <input type="checkbox" ng-model="platformValue" ng-true-value="false" ng-false-value="true">
+                  <label ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
+                </label>
+              </div>
+            </span>
+          </div>
+          <div class="main-search__fireteam">
+            <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
+              <div class="main-search__row">
+                <div class="main-search__input">
+                  <input type="text" class="form-control" placeholder="Enter profile name" ng-model="mainPlayer" ng-value="fireteam[0].name">
+                </div>
+                <div class="main-search__controls">
+                  <div class="main-search__refresh" ng-show="fireteam[0].name != null">
+                    <div class="btn-group">
+                      <button class="btn btn-default btn-icon" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
+                              ng-click="refreshInventory()"
+                              analytics-on analytics-event="Click" analytics-category="Refresh Inventory"
+                              data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
+                              data-position="right" chardin-show="true" data-class="hidden-xs hidden-sm">
+                        <i class="mdi-action-autorenew"></i>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="btn-group" ng-show="fireteam[0].otherCharacters.length > 1">
+                    <button class="btn btn-white dropdown-toggle" type="button" id="characterSelect" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      <span ng-bind="fireteam[0].className"></span>
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="characterSelect">
+                      <li ng-repeat="character in fireteam[0].otherCharacters" ng-if="fireteam[0].characterId !== character.characterId">
+                        <a ng-bind="character.className" ng-click="setRecentPlayer(character, 0, true)"
+                           analytics-on analytics-event="Click" analytics-category="Character Change">
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="main-search__submit">
+                    <button type="submit" class="hidden-sm hidden-md hidden-lg btn btn-default btn-icon" ng-disabled="status"><i class="mdi-content-send"></i></button>
+                    <button type="submit" class="hidden-xs btn btn-default btn-raised" ng-disabled="status">Search</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <!--<div ng-if="fireteam[0].name && $index < 3 && $index > 0" ng-repeat="player in fireteam track by $index">
+              <form role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, false)">
+                <div class="main-search__row">
+                  <div class="main-search__input">
+                    <input type="text" class="form-control" placeholder="Search for..." ng-value="fireteam[$index].name" ng-model="teammateName"
+                         ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'" />
+                  </div>
+                  <div class="main-search__controls">
+                    <button class="main-search__replace btn btn-raised" type="submit"
+                            ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'"
+                            data-intro="Clicking 'Suggest Other' will provide a list of players recently played with. If all else fails, you can type a player's name in the text box"
+                            data-position="right" chardin-show="{{$index === 2}}">
+                      Replace
+                    </button>
+                    <div class="main-search__recent-players">
+                      <span ng-hide="recentPlayers" class="input-group-btn">
+                        <button class="btn btn-raised" type="button"
+                               ng-click="suggestRecentPlayers()"
+                               analytics-on analytics-event="Click"
+                               analytics-category="Suggest Recent Players">
+                               Suggest Recent Players
+                        </button>
+                     </span>
+                     <div ng-show="recentPlayers" class="input-group-btn">
+                       <button class="btn dropdown-toggle btn-raised" style="margin-right:-2px" type="button"
+                               id="dropdownMenuMobile{{($index)}}" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="true">
+                         Recent Players
+                         <span class="caret"></span>
+                       </button>
+                       <ul class="dropdown-menu" aria-labelledby="dropdownMenuMobile{{$index}}">
+                         <li ng-repeat="player in recentPlayers track by $index">
+                           <a class="black-font" ng-bind="player.name" ng-click="setRecentPlayer(player, ($parent.$index))"
+                              analytics-on analytics-event="Click" analytics-category="Recent From Dropdown">
+                           </a>
+                         </li>
+                       </ul>
+                     </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  $.material.init();
+</script>
